<resources>
    <string name="app_name">Test App1</string>

    <!-- Login step one fragment -->
    <string name="lso_header">Войти</string>
    <string name="lso_tv_explanation">Введите номер телефона, чтобы войти или зарегистрироваться</string>
    <string name="lso_tv_phone_number_header">Номер телефона</string>
    <string name="lso_tv_try_again_timer">Запросить код повторно можно будет через %1$d сек.</string>
    <string name="lso_tv_rules">Нажимая кнопку \u00ABДалее\u00BB, вы соглашаетесь с условиями пользовательского соглашения и обработкой вашей персональной информации на условиях политики конфиденциальности</string>
    <string name="lso_et_phone_number_hint">+79001112233</string>
    <string name="lso_mb_next">Далее</string>

    <!-- login step two fragment -->
    <string name="lst_header">Подтверждение телефона</string>
    <string name="lst_tv_explanation">Введите код из SMS, отправленного на номер +79001112233</string>
    <string name="lst_tv_request_again">Отправить код еще раз</string>
    <string name="lst_tv_send_again_timer">Отправить код еще раз можно будет через %1$d сек.</string>
    <string name="lst_et_code_hint">код</string>

    <!-- snackbar -->
    <string name="snack_msg_no_connection">Нет связи с сервером.%nПроверьте интернет соединение.</string>
    <string name="snack_msg_rest_error">Ошибка обращения к серверу.%nПопробуйте еще раз.</string>
    <string name="snack_btn_retry">Повторить</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ic_tv_name_stub"><![CDATA[AliExpress RU&CIS NEW]]></string>
    <string name="action_provider_image_desc">Action provider image</string>
    <string name="cashback_stub">до 8,00%</string>
    <string name="desc_campaign_image">Campaign image</string>
    <string name="desc_product_image">Product image</string>
    <string name="cashback_label">Кешбэк</string>
    <string name="cashback_time_interval_label">Время начисления кешбэка</string>
    <string name="cashback_terms_label">Условия</string>
    <string name="fpd_btn_buy">Купить с кешбэком</string>
    <string name="search_label">Поиск</string>
    <string name="msg_found_nothing">По вашему запросу ничего не нашлось</string>


</resources>