<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Widget.TestApp1.CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_iv_campaign"
            style="@style/CampaignImageView"
            android:contentDescription="@string/desc_campaign_image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/ic_tv_cashback"
        style="@style/Widget.TestApp1.TextView.Main.Cashback"
        android:text="@string/cashback_stub"
        android:textAppearance="@style/TextAppearance.TestApp1.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/ic_tv_name"
        style="@style/Widget.TestApp1.TextView.Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ic_tv_name_stub"
        android:textAppearance="@style/TextAppearance.TestApp1.Body00.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>