<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ip_iv_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/desc_product_image"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/ip_tv_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/ip_tv_name"
        style="@style/Widget.TestApp1.TextView.ProductName"
        android:layout_marginTop="@dimen/margin_small"
        android:textAppearance="@style/TextAppearance.TestApp1.Body01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/ip_iv_product"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem/random" />

    <ImageView
        android:id="@+id/ip_iv_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/desc_campaign_image"
        app:layout_constraintStart_toEndOf="@+id/ip_iv_product"
        app:layout_constraintTop_toBottomOf="@id/ip_tv_name"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@android:drawable/button_onoff_indicator_on" />

    <TextView
        android:id="@+id/ip_tv_price"
        style="@style/Widget.TestApp1.TextView.ProductPrice"
        android:textAppearance="@style/TextAppearance.TestApp1.Body01.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ip_iv_product"
        app:layout_constraintTop_toBottomOf="@id/ip_iv_campaign"
        tools:text="999,00 RUB" />

    <TextView
        android:id="@+id/ip_tv_cashback"
        style="@style/Widget.TestApp1.TextView.Main.Cashback"
        android:text="@string/cashback_stub"
        android:textAppearance="@style/TextAppearance.TestApp1.Body1"
        app:layout_constraintStart_toEndOf="@+id/ip_iv_product"
        app:layout_constraintTop_toBottomOf="@+id/ip_tv_price"
        tools:ignore="TextContrastCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_small"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_tv_cashback" />

</androidx.constraintlayout.widget.ConstraintLayout>